--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,11 +1,58 @@
-# theme = catppuccin-mocha
-# theme = GruvboxDark
-# font-family = Meslo LGS Nerd Font Mono
-# font-family = CaskaydiaMono Nerd Font
+# Set font
 font-family = JetBrainsMono Nerd Font
 font-size = 13
-background-opacity = 0.4
+
+window-save-state = always
+
+# Window padding (left, right)
+# window-padding-x = 10,10 
+# Window padding (top, bottom)
+window-padding-y = 10,10
+
+background-opacity = 0.7
+
 gtk-titlebar = false
+
+mouse-hide-while-typing = true
+
+# key bindings
+keybind = ctrl+b>r=reload_config
+keybind = ctrl+b>x=close_surface
+
+
+# tabs
+keybind = ctrl+shift+t=new_tab
+keybind = ctrl+shift+w=close_tab
+keybind = ctrl+tab=next_tab
+keybind = ctrl+shift+tab=previous_tab
+
+
+# split
+keybind = ctrl+b>ctrl+h=new_split:right
+keybind = ctrl+b>ctrl+v=new_split:down
+
+# keybind = ctrl+alt+k=goto_split:top
+# keybind = ctrl+alt+j=goto_split:bottom
+# keybind = ctrl+alt+h=goto_split:left
+# keybind = ctrl+alt+l=goto_split:right
+
+keybind = ctrl+b>k=goto_split:top
+keybind = ctrl+b>j=goto_split:bottom
+keybind = ctrl+b>h=goto_split:left
+keybind = ctrl+b>l=goto_split:right
+
+# resize split
+keybind = ctrl+shift+up=resize_split:up,50
+keybind = ctrl+shift+down=resize_split:down,50
+keybind = ctrl+shift+left=resize_split:left,50
+keybind = ctrl+shift+right=resize_split:right,50
+
+keybind = ctrl+b>z=toggle_split_zoom
+
+keybind = ctrl+b>e=equalize_splits
+
+
+
 # custom-shader = /home/chris/bloom.glsl
 #custom-shader = /home/chris/crt.glsl
 # window-decoration = false
